--- a/wiki/PlanetApplicationEnquiry.wiki
+++ b/wiki/PlanetApplicationEnquiry.wiki
@@ -1,9 +1,9 @@
 #summary List of authorities using PlanetApplicationEnquiry
 
-We don't yet have a scraper for these. All the URLs end with PlanetApplicationEnquiry.
+We have a scraper for these. All the URLs end with PlanetApplicationEnquiry.
 
   * Elmbridge
   * North Lincolnshire
   * Ryedale
-  * Tewkesbury
+  * Tewkesbury (no postcodes, but does have OSGB)
   * Worcester
