--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -6,7 +6,8 @@ Types of site for which we have scrapers written
 
   * AcolNet
   * ApplicationSearchServlet
-  * FastWeb
+  * FastWeb 
+  * PlanetApplicationEnquiry
   * PublicAccess
   * PlanningExplorer
   * RutlandLike (the ones that look like the Rutland site)
