Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -16,7 +16,7 @@
 || Done || North Hertfordshire District Council || Letchworth || AcolNet || http://www.north-herts.gov.uk/dcdataonline/Pages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch||
 || || *North Kesteven District Council* || Sleaford || weekly lists as pdf || http://www.n-kesteven.gov.uk/section.asp?docId=3491 ||
 || || *North Lanarkshire Council* || Cumbernauld || list for the last week in html || http://www.northlan.gov.uk/business+and+employment/planning/planning+applications/weekly+list+of+planning+applications+week+ending+14th+may+2007.html ||
-|| || *North Lincolnshire* || Scunthorpe || PlanetApplicationEnquiry || http://www.planning.northlincs.gov.uk/planet/ispforms.asp?ServiceKey=SysDoc-PlanetApplicationEnquiry ||
+|| Done || North Lincolnshire || Scunthorpe || PlanetApplicationEnquiry || http://www.planning.northlincs.gov.uk/planet/ispforms.asp?ServiceKey=SysDoc-PlanetApplicationEnquiry ||
 || || *North Norfolk District Council* || North Norfolk || no date search || https://www.northnorfolk.org/cgi-bin/publiclivedb.15000.exe/pl/pp7010.ad ||
 || || *North Shropshire District Council* || Wem || Daily pdfs || http://www.northshropshiredc.gov.uk/static/page1048.htm ||
 || Done || North Somerset Council || Weston-super-Mare || [WAM] || http://212.158.113.30/WAM/search/pas/index.htm ||
