--- a/wiki/Ocella.wiki
+++ b/wiki/Ocella.wiki
@@ -2,7 +2,7 @@ Ocella
 
     * Arun (bit of a mess!): http://www.arun.gov.uk/iplanning/portal/page?_pageid=33,4139&_dad=portal&_schema=PORTAL
     * Barnet?: I think this is now AcolNet
-    * Breckland - can't see any Ocella here.
+    * Breckland - http://wplan01.intranet.breckland.gov.uk:7778/portal/page?_pageid=33,30988&_dad=portal&_schema=PORTAL
     * Bridgend: http://eplan.bridgend.gov.uk:7778/portal/page?_pageid=55,31779&_dad=portal&_schema=PORTAL 
     * Carrick: Currently down
     * Ellesmere Port : http://ocella.epnbc.gov.uk/portal/page?_pageid=33,38205&_dad=portal&_schema=PORTAL
