Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -7,6 +7,7 @@ Types of site for which we have scrapers written
   * AcolNet
   * ApplicationSearchServlet
   * FastWeb 
+  * [Ocella]
   * PlanetApplicationEnquiry
   * PublicAccess
   * PlanningExplorer
