--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -24,7 +24,7 @@
 || Done || Bradford || City of Bradford Metropolitan District Council || PublicAccess || http://www.planning4bradford.com/tdc/DcApplication/application_searchform.aspx ||
 || Done || Braintree || Braintree District Council || [WAM] || http://planningapp.braintree.gov.uk/WAM1/searchsubmit/performOption.do?action=search ||
 || || *Brecon Beacons* || Breacon Beacons National Park Authority || weekly lists as pdf or rtf || http://www.breconbeacons.org/planning/planning_apps ||
-|| Done || Breckland || Breckland District Council || [Ocella] || http://wplan01.intranet.breckland.gov.uk:7778/portal/page?_pageid=33,30970&_dad=portal&_schema=PORTAL ||
+|| Done || Breckland || Breckland District Council || [Ocella]  *(few postcodes)*|| http://wplan01.intranet.breckland.gov.uk:7778/portal/page?_pageid=33,30970&_dad=portal&_schema=PORTAL ||
 || || *Brent* || Brent Borough Council || search by date || http://www.brent.gov.uk/servlet/ep.ext?extId=101149&byPeriod=Y&st=PL&periodUnits=day&periodMultiples=14 ||
 || || *Brentwood* || Brentwood Borough Council || weekly lists as pdf || http://www.brentwood-council.gov.uk/index.php?cid=573 ||
 || In Progress || *Bridgend* || Bridgend County Borough Council || [Ocella] || http://eplan.bridgend.gov.uk:7778/portal/page?_pageid=55,31779&_dad=portal&_schema=PORTAL ||
