--- a/wiki/PlanningAuthoritiesE.wiki
+++ b/wiki/PlanningAuthoritiesE.wiki
@@ -4,7 +4,8 @@
 || Done || East Cambridgeshire District Council || Ely || PublicAccess || http://pa.eastcambs.gov.uk/publicaccess/tdc/tdc_home.aspx||
 || Done || East Devon District Council || Sidmouth || PublicAccess || http://planning.eastdevon.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx||
 || Done || East Dorset District Council || Wimborne Minster || PublicAccess || http://193.243.228.16/PublicAccess/tdc/tdc_home.aspx ||
-||  || *East Dunbartonshire Council* || Glasgow || searchable by date || http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/InternetMF?ReadForm&M=DEFAULTC=http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/QuickLinkPagesWeb/Planning%20Apps?OpenDocument ||  || *East Hampshire District Council* || Petersfield || last week's apps || http://213.131.177.248/ehdc/planningapplicationsonline.nsf/LastWeek?OpenView&count=1000 ||
+||  || *East Dunbartonshire Council* || Glasgow || searchable by date || http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/InternetMF?ReadForm&M=DEFAULTC=http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/QuickLinkPagesWeb/Planning%20Apps?OpenDocument || 
+|| *East Hampshire District Council* || Petersfield || last week's apps || http://213.131.177.248/ehdc/planningapplicationsonline.nsf/LastWeek?OpenView&count=1000 ||
 || Done || East Hertfordshire District Council || Hertford || [SwiftLG] || http://e-services.eastherts.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || East Lindsey District Council || Louth || AcolNet || http://www.e-lindsey.gov.uk/planning/AcolnetCGI.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || East Lothian Council || Haddington || [WAM] || http://www.planning.eastlothian.gov.uk/WAM/search/pas/index.htm ||
