Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesF.wiki
+++ b/wiki/PlanningAuthoritiesF.wiki
@@ -1,5 +1,5 @@
 ||  || *Falkirk Council* || Falkirk || weekly lists as pdf || http://www.falkirk.gov.uk/services/development/development_control/planning_application_lists/planning_application_lists.aspx ||
-||  || *Fareham Borough Council* || Fareham || searchable by date [Ocella]? || http://www.fareham.gov.uk/planningonline/intro.asp?section=weekly_lists ||
+|| Done || Fareham Borough Council || Fareham || [Ocella] || http://eocella.fareham.gov.uk/portal/page?_pageid=33,31754&_dad=portal&_schema=PORTAL ||
 || Done || Fenland District Council || March || PublicAccess || http://www.fenland.gov.uk/publicaccess/ ||
 ||  || *Fife Council* || Glenrothes || searchable by date || http://www.fifedirect.org.uk/topics/index.cfm?fuseaction=planapps.list&subjectid=104CC166-3ED1-4D22-B9F1E2FB8438478A&thisweek=show ||
 ||  || *Flintshire County Council* || Mold || searchable by date || http://www.flintshire.gov.uk/webcont/fssplaps.nsf/$$search?openform ||
