--- a/wiki/PlanningAuthoritiesU.wiki
+++ b/wiki/PlanningAuthoritiesU.wiki
@@ -1,1 +1,1 @@
-||  || *Uttlesford* || Saffron Walden || [Ocella] || http://www.uttlesford.gov.uk/planning/default7.htm ||
+|| Done || Uttlesford || Saffron Walden || [Ocella] || http://planning.uttlesford.gov.uk/portal/page?_pageid=33,35447&_dad=portal&_schema=PORTAL ||
