--- a/wiki/PlanningAuthoritiesM.wiki
+++ b/wiki/PlanningAuthoritiesM.wiki
@@ -9,7 +9,7 @@
 ||  || *Mendip District Council* || Shepton Mallet || searchable by date || http://www.mendip.gov.uk/pods/ApplicationSearch.asp ||
 ||  || *Merthyr Tydfil County Council* || Merthyr Tydfil || weekly lists as pdf || http://www.merthyr.gov.uk/Home/Local+Services/Planning/Development+Control/Weekly+List/April+2007.htm ||
 || In Progress || *Merton Borough Council* || Morden || PlanningExplorer - site is down || http://planning.merton.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
-|| In Progress || *Mid Bedfordshire District Council* || Biggleswade || there is an AcolNet here, but it is password protected, and only available to invited consultees! Also weekly lists of pdfs ||  http://www.midbeds.gov.uk/services/planning/planning_apps/Weekly_List_of_Planning_Applications.asp ||
+|| Done || Mid Bedfordshire District Council || Biggleswade || AcolNet ||  http://www.midbeds.gov.uk/services/planning/planning_apps/Weekly_List_of_Planning_Applications.asp ||
 || Done || Mid Devon District Council || Tiverton || PublicAccess || http://planning.middevon.gov.uk/publicaccess/ ||
 || Done (no postcodes) || Mid Suffolk District Council || Needham Market || AcolNet, but locations have no postcode || http://www.midsuffolkdc.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
 || Done || Mid Sussex District Council || Haywards Heath || PublicAccess || http://dc.midsussex.gov.uk/PublicAccess/ ||
