Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesA.wiki
+++ b/wiki/PlanningAuthoritiesA.wiki
@@ -9,6 +9,6 @@
 || Done || Angus || Angus Council || PublicAccess || http://planning.angus.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
 || Done || Argyll and Bute || Argyll and Bute Council || PublicAccess || http://www.argyll-bute.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Arun || Arun District Council || [Ocella] || http://www.arun.gov.uk/iplanning/portal/page?_pageid=33,4139&_dad=portal&_schema=PORTAL ||
-|| || *Ashfield* || Ashfield District Council || last 7 days apps as html - no -search for date received || http://www.ashfield-dc.gov.uk/cfusion/planning/plan_findfile.cfm ||
+|| || *Ashfield* || Ashfield District Council || *(no postcodes)* last 7 days apps as html - no -search for date received || http://www.ashfield-dc.gov.uk/cfusion/planning/plan_findfile.cfm ||
 || || *Ashford* || Ashford Borough Council || Searchable by registration date - also UKPlanning || http://www.ashford.gov.uk/online_planning/DCCore/default.aspx?newsearch=true ||
 || Done || Aylesbury Vale || Aylesbury Vale District Council || PublicAccess || http://eplanning.aylesburyvaledc.gov.uk/dc/DcApplication/application_searchform.aspx ||
