--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -8,7 +8,7 @@
 || Done || Bassetlaw || Bassetlaw District Council || AcolNet (not many postcodes) || http://www.bassetlaw.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || Done || Bath || Bath & North East Somerset Council || PublicAccess || http://planning.bathnes.gov.uk/publicaccess/ ||
 || Done || Bedford || Bedford Borough Council || PublicAccess ||http://www.publicaccess.bedford.gov.uk/publicaccess/default.aspx ||
-|| || *Bedfordshire* || Bedfordshire County Council || county council only responsible for a small amount of planning and nothing obvious listed online || ||
+|| || *Bedfordshire* || Bedfordshire County Council || minerals and waste only. Single pdb with *no postcodes* || http://www.bedfordshire.gov.uk/Resources/PDF/EnvironmentAndPlanning/PlanningApplications/Monitoring%20progress.pdf ||
 || || *Berwick* || Berwick-upon-Tweed Borough Council || weekly lists in html || http://www.berwick-upon-tweed.gov.uk/planning/register.htm ||
 || Done || Bexley || Bexley Borough Council || PublicAccess ||http://publicaccess.bexley.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || || *Birmingham* ||Birmingham City Council || searchable by date || http://www.birmingham.gov.uk/GenerateContent?CONTENT_ITEM_ID=67548&CONTENT_ITEM_TYPE=0&MENU_ID=12189 ||
