--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -2,7 +2,7 @@
 || || *Darlington* || Darlington Borough Council || Applications can be searched by validation date. Weekly list also available. || http://www.darlington.gov.uk/eServices/PlanApps/PlanAppsViewer.aspx?SearchType=advanced ||
 || Done || Dartford || Dartford Borough Council || PublicAccess || || 
 || || *Dartmoor* || Dartmoor National Park Authority || weekly and monthly lists in html *(no postcodes)* || http://www.dartmoor-npa.gov.uk/index/planning/pl-devcontrol/pl-searchapplicationregister/application_register.htm ||
-|| || *Daventry* || Daventry District Council || [SwiftLG] - not responding ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
+|| Done || Daventry || Daventry District Council || [SwiftLG] ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Denbighshire || Denbighshire County Council|| ApplicationSearchServlet ||  http://planning.denbighshire.gov.uk/portal/servlets/ApplicationSearchServlet ||
 || Done (no postcodes) || Derby || Derby City Council || AcolNet ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
 || || *Derbyshire* || Derbyshire County Council || only responsible for a small amount. all apps online ||  http://www.derbyshire.gov.uk/environment/planning/planning_applications/current_applications/ ||
