--- a/wiki/SwiftLG.wiki
+++ b/wiki/SwiftLG.wiki
@@ -2,10 +2,8 @@ Sites that look like East Hertfordshire (urls contain "wphappcriteria"):
 
 We now have a python parser for these (as well as parsers in PHP for East Herts and Islington).
 
-Daventry is currently not responding, so we'll have to do them later.
-
     * Boston
-    * Daventry (currently not responding)
+    * Daventry
     * Dudley
     * East Hertfordshire
     * Gwynedd
