Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -21,6 +21,7 @@ Others:
   * Barnsley
   * Broxbourne - Tom's Scraper
   * Enfield
+  * Fife
   * Isle of Wight
   * Kensington and Chelsea
   * Shetland Islands
