Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesF.wiki
+++ b/wiki/PlanningAuthoritiesF.wiki
@@ -2,7 +2,7 @@
 || Done || Fareham Borough Council || Fareham || [Ocella] || http://eocella.fareham.gov.uk/portal/page?_pageid=33,31754&_dad=portal&_schema=PORTAL ||
 || Done || Fenland District Council || March || PublicAccess || http://www.fenland.gov.uk/publicaccess/ ||
 || Done || Fife Council || Glenrothes || Custom Scraper || http://www.fifedirect.org.uk/topics/index.cfm?fuseaction=planapps.list&subjectid=104CC166-3ED1-4D22-B9F1E2FB8438478A&thisweek=show ||
-||  || *Flintshire County Council* || Mold || searchable by date || http://www.flintshire.gov.uk/webcont/fssplaps.nsf/$$search?openform ||
+|| Done || Flintshire County Council || Mold || Custom Scraper || http://www.flintshire.gov.uk/webcont/fssplaps.nsf/$$search?openform ||
 || Done || Forest Heath District Council || Mildenhall || PlanningExplorer *(No Postcodes)*|| http://195.171.177.73/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || Forest of Dean District Council || Coleford || Custom Parser || http://www.fdean.gov.uk/content.asp?nav=266&Parent_Directory_ID=200&ID=13265&HTMLID=Latest ||
 || Done || Fylde Borough Council || Wesham || AcolNet || http://www2.fylde.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
