--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -22,6 +22,7 @@ Others:
   * Broxbourne - Tom's Scraper
   * Enfield
   * Fife
+  * Flintshire
   * Forest of Dean
   * Isle of Wight
   * Kensington and Chelsea
