Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -26,6 +26,7 @@ Others:
   * Forest of Dean
   * Isle of Wight
   * Kensington and Chelsea
+  * Maldon
   * Shetland Islands
   * South Oxfordshire
   * Walsall - Paul's Scraper
