Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesM.wiki
+++ b/wiki/PlanningAuthoritiesM.wiki
@@ -4,7 +4,7 @@
 || Done || Malvern Hills District Council || Malvern || PublicAccess || ||
 || Done || Manchester City Council || Manchester || PublicAccess || http://www.publicaccess.manchester.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || Done|| Mansfield District Council || Mansfield || FastWeb || http://www.mansfield.gov.uk/Fastweb/search.asp ||
-||  || *Medway Council* || Chatham || PlanningOnline, searchable by date || http://www.medway.gov.uk/index/environment/planning/planapp/planonline.htm ||
+|| Done || Medway Council || Chatham || Custom Scraper || http://www.medway.gov.uk/index/environment/planning/planapp/planonline.htm ||
 || Done || Melton Borough Council || Melton Mowbray || PublicAccess (from 2008, previously RutlandLike) || http://publicaccess.melton.gov.uk/publicaccess/tdc/ ||
 ||  || *Mendip District Council* || Shepton Mallet || searchable by date || http://www.mendip.gov.uk/pods/ApplicationSearch.asp ||
 ||  || *Merthyr Tydfil County Council* || Merthyr Tydfil || weekly lists as pdf || http://www.merthyr.gov.uk/Home/Local+Services/Planning/Development+Control/Weekly+List/April+2007.htm ||
