--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -27,6 +27,7 @@ Others:
   * Isle of Wight
   * Kensington and Chelsea
   * Maldon
+  * Medway
   * Shetland Islands
   * South Oxfordshire
   * Walsall - Paul's Scraper
