--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -12,7 +12,7 @@
 || || *Shepway District Council* || Folkestone || ukplanning - searchable by date. also html weekly list|| http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Shepway%20District%20Council&fwd=search,   http://www.shepway.gov.uk/webapp/service/query/planning-week.do?go=on ||
 || Done || Shetland Islands Council || Lerwick || Custom Scraper || http://www.shetland.gov.uk/planningcontrol/apps/ ||
 || Done || Shrewsbury & Atcham Borough Council || Shrewsbury || PlanningExplorer || http://www2.shrewsbury.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
-|| || *Shropshire County Council* || Shrewsbury || searchable by date (minerals and waste only) || http://planning.shropshire.gov.uk/PlanAppSrch.asp ||
+|| Done || Shropshire County Council || Shrewsbury || Custom Scraper. Has OSGB (minerals and waste only) || http://planning.shropshire.gov.uk/PlanAppSrch.asp ||
 || Done || Slough Borough Council || Slough || [SwiftLG] || http://www2.slough.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Snowdonia National Park Authority || Penrhynduedraeth || [SwiftLG] || http://www.eryri-npa.co.uk/swiftlg_test/apas_test/run/wphappcriteria.display ||
 || || *Solihull Metropolitan Borough Council* || Solihull || weekly lists in html || http://www.solihull.gov.uk/planning/dc/weeklist.asp ||
@@ -29,7 +29,7 @@
 || Done || South Lakeland District Council || Kendal || FastWeb || http://www.southlakeland.gov.uk/fastweb/search.asp ||
 || || *South Lanarkshire Council* || East Kilbride, Hamilton, Lanark, Rutherglen || pdf file of recent apps || http://www.southlanarkshire.gov.uk/portal/page/portal/EXTERNAL_WEBSITE_DEVELOPMENT/SLC_ONLINE_HOME/SLC_ATOZ/PUBLICATION_ATOZ/RELATED_PUBLICATION/?keyword1=currentplanningappsdoc ||
 || Done || South Norfolk Council || Long Stratton || PlanningExplorer and [WAM] (but no postcodes) || http://planning.south-norfolk.gov.uk/MVM/Online/PL/GeneralSearch.aspx, http://wam.south-norfolk.gov.uk/WAM/search/pas/index.htm ||
-|| || *South Northamptonshire* || Towcester || searchable by date || http://snc.planning-register.co.uk/PlanAppSrch.asp ||
+|| Done || South Northamptonshire || Towcester || Like Shropshire. Has OSGB. *(few or no postcodes)* || http://snc.planning-register.co.uk/PlanAppSrch.asp ||
 || Done || South Oxfordshire District Council || Wallingford || html list by seven day periods - implemented as a special case. || http://www.southoxon.gov.uk/ccm/planning/ApplicationList.jsp ||
 || Done || South Ribble Borough Council || Leyland || PublicAccess || http://publicaccess.southribble.gov.uk/publicaccess/ ||
 || Done || South Shropshire District Council || Ludlow || PlanningExplorer (paging in javascript) || http://194.201.44.102/MVM/Online/PL/GeneralSearch.aspx ||
